[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "step2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyusb>=1.2",
    "pytest>=8.0",
    "pyserial>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
markers = [
    "dlpc6540: 19V / 6A",
    "stage: 12V / 3A",
]
